--- a/dev/html/perform/relayList.pug
+++ b/dev/html/perform/relayList.pug
@@ -94,7 +94,7 @@ block contents
 
                 section.search-result
                     .section-inner
-                        .tab-util
+                        .area-util
                             .txt-total 총 <strong>107</strong>건
                             .list-search
                                 select(name="장르") 
@@ -117,7 +117,7 @@ block contents
                                     input(type="text" placeholder="검색어를 입력하세요.")
                                     button(type="button").btn-search
                                         span.hide-txt 검색
-                        ul.tab-result-list
+                        ul.area-thumb-list
                             li.list
                                 a(href="#none").box-thumb
                                     .thumb-img
