--- a/dev/css_partials/prototype.scss
+++ b/dev/css_partials/prototype.scss
@@ -409,6 +409,8 @@ display: -webkit-box;
 
         & + .txt {
             margin-top: 16px;
+            color:#222;
+            font-weight: bold;
         }
 
         &.mont {
