--- a/dev/html/culturetv/videoList.pug
+++ b/dev/html/culturetv/videoList.pug
@@ -25,7 +25,7 @@ block contents
                             li
                                 a.link-print(href="#" role="button")
 
-                section.visual-top
+                section.visual-top.line-gray
                     .section-inner
                         .title-area
                             h1.title-h1 문화영상
@@ -65,4 +65,97 @@ block contents
                                         dl.info
                                             dt 등록일
                                             dd 2022-09-22
+                section.search-result
+                    .section-inner
+                        .tab-util
+                            .txt-total 총 <strong>3131</strong>건
+                            .list-search
+                                select(name="장르") 
+                                    option(value="") 전체
+                                    option(value="") 옵션1
+                                    option(value="") 옵션2
+                                select(name="") 
+                                    option(value="") 지역
+                                    option(value="") 옵션1
+                                    option(value="") 옵션2
+                                select(name="") 
+                                    option(value="") 7거리
+                                    option(value="") 옵션1
+                                    option(value="") 옵션2
+                                .search-input
+                                    input(type="text" placeholder="검색어를 입력하세요.")
+                                    button(type="button").btn-search
+                                        span.hide-txt 검색
+                        ul.content-list
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+                            li.list
+                                a(href="#none").box-thumb
+                                        .thumb-img
+                                            img(src="../../images/thumb_img.png", alt="")
+                                            i.ico-play(aria-hidden="true")
+                                        ul.thumb-tag.size02
+                                            li.tag
+                                                span.txt 생활
+                                            li.tag.reverse
+                                                span.txt 서울
+                                        .thumb-txt
+                                            p.tit.size02.ellipsis.type02 ‘랑종’을 능가하는 공포 특집, 더운 날에는 무서운 게 ...
+                                            p.txt.size02.ellipsis.type02 얼마 전 개봉한 영화 ‘랑종’ 보셨나요? 여름만 되면 등골이 서늘한 공포물이 당겨!
+                                            p.txt.size02 문화포털
+
 
