--- a/dev/html/oneeye/oneEyeList.pug
+++ b/dev/html/oneeye/oneEyeList.pug
@@ -250,7 +250,7 @@ block contents
                                         span.hide-txt 검색
                                 .area-button
                                     button(type="button").btn-open
-                                        span.txt 쉬운 검색 닫기
+                                        span.txt 쉬운 검색 열기
                                         i.ico-arrow(aria-hidden="true")
                                     a(href="#none").btn-confirm
                                         span.txt 예약확인 
@@ -297,22 +297,26 @@ block contents
                         .area-util
                             .txt-total 총 <strong>107</strong>건
                             .list-search
-                                select(name="장르") 
-                                    option(value="") 장르 전체
-                                    option(value="") 옵션1
-                                    option(value="") 옵션2
-                                select(name="") 
-                                    option(value="") 지역 전체
-                                    option(value="") 옵션1
-                                    option(value="") 옵션2
-                                select(name="") 
-                                    option(value="") 공연/전시일
-                                    option(value="") 옵션1
-                                    option(value="") 옵션2
-                                select(name="") 
-                                    option(value="") 제목
-                                    option(value="") 옵션1
-                                    option(value="") 옵션2
+                                .form-box
+                                    select(name="장르") 
+                                        option(value="") 장르 전체
+                                        option(value="") 옵션1
+                                        option(value="") 옵션2
+                                .form-box
+                                    select(name="") 
+                                        option(value="") 지역 전체
+                                        option(value="") 옵션1
+                                        option(value="") 옵션2
+                                .form-box
+                                    select(name="") 
+                                        option(value="") 공연/전시일
+                                        option(value="") 옵션1
+                                        option(value="") 옵션2
+                                .form-box
+                                    select(name="") 
+                                        option(value="") 제목
+                                        option(value="") 옵션1
+                                        option(value="") 옵션2
                                 .search-input
                                     input(type="text" placeholder="검색어를 입력하세요.")
                                     button(type="button").btn-search
@@ -650,10 +654,14 @@ block contents
 block append script
     script.
         // 검색 상세옵션 오픈
+        let $wrapSearch = $('.wrap-search');
         $('.wrap-search .btn-open').on('click', function(){
-            if ($('.wrap-search').hasClass('open')) {
-                $('.wrap-search').removeClass('open');
+            if ($wrapSearch.hasClass('open')) {
+                $wrapSearch.removeClass('open');
+                $('.wrap-search .btn-open .txt').text('쉬운 검색 열기');
+
             } else {
-                $('.wrap-search').addClass('open');
+                $wrapSearch.addClass('open');
+                $('.wrap-search .btn-open .txt').text('쉬운 검색 닫기');
             }
         });
