--- a/dev/css_partials/prototype.scss
+++ b/dev/css_partials/prototype.scss
@@ -514,7 +514,7 @@ display: -webkit-box;
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    padding-bottom: 10px;
+    padding-bottom: 16px;
     margin-top: 17px;
     border-bottom: 1px solid #ddd;
     flex-wrap: wrap;
@@ -532,6 +532,12 @@ display: -webkit-box;
         margin-top: 15px;
         flex-wrap: wrap;
 
+        .form-box {
+            display: flex;
+            margin-right: 12px;
+            // margin-bottom: 6px;
+        }
+
         select {
             font-size: 13px;
             color: #222;
@@ -545,15 +551,24 @@ display: -webkit-box;
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
-            margin-right: 12px;
-            margin-bottom: 6px;
+        }
+
+        .btn-view {
+            background: #222222;
+            padding: 0 16px;
+            
+
+            .txt {
+                font-size: 14px;
+                color: #fff;
+            }
         }
     }
 
     .search-input {
         position: relative;
         width: 220px;
-        margin-bottom: 6px;
+        // margin-bottom: 6px;
 
         input {
             width: 100%;
@@ -597,6 +612,11 @@ display: -webkit-box;
 
 
 @media (max-width:1279px){
+    .breadcrumb {
+        margin-top: -40px;
+    }
+
+    // 썸네일 리스트
     .area-thumb-list {
         margin-left: -20px;
     }
@@ -648,6 +668,10 @@ display: -webkit-box;
         }
     }
 
+    // 썸네일 리스트 유틸
+    .area-util .list-search > div {
+        margin-top: 10px;
+    }
 
     // 썸네일 리스트
     .area-thumb-list .list {
