--- a/dev/html/culturetv/videoList.pug
+++ b/dev/html/culturetv/videoList.pug
@@ -4,7 +4,7 @@ block append css
     //- link(href=`${pathSettingHtml}css/culturetv.css`, type='text/css', rel='stylesheet')
 
 block contents
-    #container.pageClassSub
+    #container.videoList
         #content(role='main')
             .content-inner
                 nav.breadcrumb
