--- a/dev/html/oneeye/oneEyeList.pug
+++ b/dev/html/oneeye/oneEyeList.pug
@@ -295,7 +295,8 @@ block contents
                                 span.txt 연구/자료
                                 em.num 1791건
                         .area-util
-                            .txt-total 총 <strong>107</strong>건
+                            .align-box
+                                .txt-total 총 <strong>107</strong>건
                             .list-search
                                 .form-box
                                     select(name="장르") 
