릴레이티켓 완료

--- a/dev/css_partials/kya.scss
+++ b/dev/css_partials/kya.scss
@@ -914,6 +914,14 @@
     }
 }
 
+.section-banner {
+    padding-bottom: 120px;
+
+    .title-h4 {
+        margin-bottom: 52px;
+    }
+}
+
 
 // .type-home {
 //     &.slide-contents .thumb-img {
@@ -1030,6 +1038,14 @@
     }
     .main-home-swiper .box-txt .txt-data {
         // font-size: 12px;
+    }
+
+    .search-result {
+        padding-bottom: 40px;
+    }
+
+    .section-banner {
+        padding-bottom: 40px;
     }
 
 
