--- a/dev/html/perform/relayList.pug
+++ b/dev/html/perform/relayList.pug
@@ -92,7 +92,7 @@ block contents
                                             li 티켓 예매 및 할인은 동반 1인까지 가능하나, 전자스탬프 적립은 1인 1스탬프만 적용
                                             li 참여 공연장이라면, 타공연장 및 동일 공연장 티켓 모두 할인 적용
 
-                section.search-result
+                section.search-result.line-gray
                     .section-inner
                         .area-util
                             .align-box
@@ -330,7 +330,119 @@ block contents
                                 span.hide-txt 뒤로
                             button.btn-last(type="button")
                                 span.hide-txt 맨뒤로
-                                    
+
+                section.section-banner
+                    .section-inner
+                        h3.title-h4 참여 공연장
+                        ul.area-thumb-list
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
+                            li.list
+                                .box-thumb
+                                    .thumb-img
+                                        img(src="../../images/thumb_img03.jpg", alt="")
+                                    .thumb-txt
+                                        p.txt.size01.mont 031-230-3200
 
 block append script
     script.
