--- a/dev/html/perform/relayList.pug
+++ b/dev/html/perform/relayList.pug
@@ -99,7 +99,7 @@ block contents
                                 .txt-total 총 <strong>107</strong>건
                                 .radio-box-wrap
                                     .radio-box
-                                        input#radio01(type="radio" name="test")
+                                        input#radio01(type="radio" name="test" checked)
                                         label.txt-radio(for="radio01")
                                             span.txt 할인순
                                     .radio-box
