--- a/dev/css_partials/prototype.scss
+++ b/dev/css_partials/prototype.scss
@@ -546,7 +546,7 @@ display: -webkit-box;
             width: 130px;
             padding: 8px 10px 9px;
             font-family: inherit;
-            background:url('/images/home/ico_arrow_select.png') center right 13px no-repeat; 
+            background:url('/images/icons/ico_arrow_select.png') center right 13px no-repeat; 
             background-size: 9px 5px;
             border: 1px solid #ddd; 
             border-radius: 0px;
@@ -591,7 +591,7 @@ display: -webkit-box;
             height: 100%;
             right: 0;
             top: 0;
-            background:url('/images/home/ico_search.png') center no-repeat;
+            background:url('/images/icons/ico_search.png') center no-repeat;
             background-size: 20px 20px; 
         }
     }
